--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "config": "^3.2.2",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "passport": "^0.4.0"
   },
